@@ -1,13 +1,12 @@
 package org.lflang.tests;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.lang.Thread.UncaughtExceptionHandler;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Path;
@@ -26,9 +25,9 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.util.URI;
+import org.eclipse.emf.ecore.resource.Resource.Diagnostic;
 import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.eclipse.xtext.diagnostics.Severity;
-import org.eclipse.xtext.generator.IGeneratorContext;
 import org.eclipse.xtext.generator.JavaIoFileSystemAccess;
 import org.eclipse.xtext.testing.InjectWith;
 import org.eclipse.xtext.testing.extensions.InjectionExtension;
@@ -43,8 +42,9 @@ import org.lflang.FileConfig;
 import org.lflang.LFRuntimeModule;
 import org.lflang.LFStandaloneSetup;
 import org.lflang.Target;
-import org.lflang.generator.GeneratorResult;
+import org.lflang.federated.generator.FedFileConfig;
 import org.lflang.generator.DockerGeneratorBase;
+import org.lflang.generator.GeneratorResult;
 import org.lflang.generator.LFGenerator;
 import org.lflang.generator.LFGeneratorContext;
 import org.lflang.generator.LFGeneratorContext.BuildParm;
@@ -62,7 +62,7 @@ import com.google.inject.Provider;
 /**
  * Base class for test classes that define JUnit tests.
  *
- * @author Marten Lohstroh <marten@berkeley.edu>
+ * @author Marten Lohstroh
  */
 @ExtendWith(InjectionExtension.class)
 @InjectWith(LFInjectorProvider.class)
@@ -85,7 +85,7 @@ public abstract class TestBase {
     private static final PrintStream err = System.err;
 
     /** Execution timeout enforced for all tests. */
-    private static final long MAX_EXECUTION_TIME_SECONDS = 60;
+    private static final long MAX_EXECUTION_TIME_SECONDS = 300;
 
     /** Content separator used in test output, 78 characters wide. */
     public static final String THIN_LINE =
@@ -102,14 +102,14 @@ public abstract class TestBase {
 
     /**
      * An enumeration of test levels.
-     * @author Marten Lohstroh <marten@berkeley.edu>
+     * @author Marten Lohstroh
      *
      */
     public enum TestLevel {VALIDATION, CODE_GEN, BUILD, EXECUTION}
 
     /**
      * Static function for converting a path to its associated test level.
-     * @author Anirudh Rengarajan <arengarajan@berkeley.edu>
+     * @author Anirudh Rengarajan
      */
     public static TestLevel pathToLevel(Path path) {
         while(path.getParent() != null) {
@@ -127,7 +127,7 @@ public abstract class TestBase {
     /**
      * A collection messages often used throughout the test package.
      *
-     * @author Marten Lohstroh <marten@berkeley.edu>
+     * @author Marten Lohstroh
      *
      */
     public static class Message {
@@ -135,6 +135,7 @@ public abstract class TestBase {
         public static final String NO_WINDOWS_SUPPORT = "Not (yet) supported on Windows.";
         public static final String NO_SINGLE_THREADED_SUPPORT = "Target does not support single-threaded execution.";
         public static final String NO_FEDERATION_SUPPORT = "Target does not support federated execution.";
+        public static final String NO_ENCLAVE_SUPPORT = "Targeet does not support the enclave feature.";
         public static final String NO_DOCKER_SUPPORT = "Target does not support the 'docker' property.";
         public static final String NO_DOCKER_TEST_SUPPORT = "Docker tests are only supported on Linux.";
         public static final String NO_GENERICS_SUPPORT = "Target does not support generic types.";
@@ -148,6 +149,7 @@ public abstract class TestBase {
         public static final String DESC_FEDERATED = "Run federated tests.";
         public static final String DESC_DOCKER = "Run docker tests.";
         public static final String DESC_DOCKER_FEDERATED = "Run docker federated tests.";
+        public static final String DESC_ENCLAVE = "Run enclave tests.";
         public static final String DESC_CONCURRENT = "Run concurrent tests.";
         public static final String DESC_TARGET_SPECIFIC = "Run target-specific tests";
         public static final String DESC_ARDUINO = "Running Arduino tests.";
@@ -180,7 +182,6 @@ public abstract class TestBase {
      * @param selected A predicate that given a test category returns whether
      * it should be included in this test run or not.
      * @param configurator  A procedure for configuring the tests.
-     * @param level The level of testing to be performed during this run.
      * @param copy Whether or not to work on copies of tests in the test.
      * registry.
      */
@@ -188,8 +189,7 @@ public abstract class TestBase {
                                                  Predicate<TestCategory> selected,
                                                  Configurator configurator,
                                                  boolean copy) {
-        var categories = Arrays.stream(TestCategory.values()).filter(selected)
-                .collect(Collectors.toList());
+        var categories = Arrays.stream(TestCategory.values()).filter(selected).toList();
         for (var category : categories) {
             System.out.println(category.getHeader());
             var tests = TestRegistry.getRegisteredTests(target, category, copy);
@@ -210,7 +210,6 @@ public abstract class TestBase {
      * @param selected A predicate that given a test category returns whether
      * it should be included in this test run or not.
      * @param configurator A procedure for configuring the tests.
-     * @param level The level of testing to be performed during this run.
      * @param copy Whether or not to work on copies of tests in the test.
      * registry.
      */
@@ -232,7 +231,6 @@ public abstract class TestBase {
      * @param selected A predicate that given a test category returns whether
      * it should be included in this test run or not.
      * @param configurator A procedure for configuring the tests.
-     * @param level The level of testing to be performed during this run.
      * @param copy Whether to work on copies of tests in the test.
      * registry.
      */
@@ -248,7 +246,7 @@ public abstract class TestBase {
     }
 
     /**
-     * Whether to enable {@link #runWithThreadingOff()}.
+     * Whether to enable threading.
      */
     protected boolean supportsSingleThreadedExecution() {
         return false;
@@ -366,7 +364,7 @@ public abstract class TestBase {
             test.reportErrors();
         }
         for (LFTest lfTest : tests) {
-            assertSame(Result.TEST_PASS, lfTest.result);
+            assertTrue(lfTest.hasPassed());
         }
     }
 
@@ -380,12 +378,12 @@ public abstract class TestBase {
      * @param configurator The configurator to apply to the test.
      * @param level The level of testing in which the generator context will be
      * used.
-     * @return a generator context with a fresh resource, unaffected by any AST
-     * transformation that may have occured in other tests.
-     * @throws IOException if there is any file access problem
      */
-    private LFGeneratorContext configure(LFTest test, Configurator configurator, TestLevel level) throws IOException {
+    private void configure(LFTest test, Configurator configurator, TestLevel level) throws IOException, TestError {
         var props = new Properties();
+        props.setProperty("hierarchical-bin", "true");
+        addExtraLfcArgs(props);
+
         var sysProps = System.getProperties();
         // Set the external-runtime-path property if it was specified.
         if (sysProps.containsKey("runtime")) {
@@ -398,60 +396,53 @@ public abstract class TestBase {
             System.out.println("Using default runtime.");
         }
 
-        var context = new MainContext(
-            LFGeneratorContext.Mode.STANDALONE, CancelIndicator.NullImpl, (m, p) -> {}, props, true,
-            fileConfig -> new DefaultErrorReporter()
-        );
-
         var r = resourceSetProvider.get().getResource(
-            URI.createFileURI(test.srcFile.toFile().getAbsolutePath()),
+            URI.createFileURI(test.getSrcPath().toFile().getAbsolutePath()),
             true);
 
         if (r.getErrors().size() > 0) {
-            test.result = Result.PARSE_FAIL;
-            throw new AssertionError("Test did not parse correctly.");
+            String message = r.getErrors().stream().map(Diagnostic::toString).collect(Collectors.joining(System.lineSeparator()));
+            throw new TestError(message, Result.PARSE_FAIL);
         }
 
-        fileAccess.setOutputPath(FileConfig.findPackageRoot(test.srcFile, s -> {}).resolve(FileConfig.DEFAULT_SRC_GEN_DIR).toString());
-        test.context = context;
-        test.fileConfig = new FileConfig(r, FileConfig.getSrcGenRoot(fileAccess), context.useHierarchicalBin());
+        fileAccess.setOutputPath(FileConfig.findPackageRoot(test.getSrcPath(), s -> {}).resolve(FileConfig.DEFAULT_SRC_GEN_DIR).toString());
+        var context = new MainContext(
+            LFGeneratorContext.Mode.STANDALONE, CancelIndicator.NullImpl, (m, p) -> {}, props, r, fileAccess,
+            fileConfig -> new DefaultErrorReporter()
+        );
+
+        test.configure(context);
 
         // Set the no-compile flag the test is not supposed to reach the build stage.
         if (level.compareTo(TestLevel.BUILD) < 0) {
             context.getArgs().setProperty("no-compile", "");
         }
 
-        addExtraLfcArgs(context.getArgs());
-
         // Update the test by applying the configuration. E.g., to carry out an AST transformation.
         if (configurator != null && !configurator.configure(test)) {
-            test.result = Result.CONFIG_FAIL;
-            throw new AssertionError("Test configuration unsuccessful.");
+            throw new TestError("Test configuration unsuccessful.", Result.CONFIG_FAIL);
         }
-
-        return context;
     }
 
     /**
-     * Validate the given test. Throw an AssertionError if validation failed.
+     * Validate the given test. Throw an TestError if validation failed.
      */
-    private void validate(LFTest test, IGeneratorContext context) {
+    private void validate(LFTest test) throws TestError {
         // Validate the resource and store issues in the test object.
         try {
-            var issues = validator.validate(test.fileConfig.resource,
+            var context = test.getContext();
+            var issues = validator.validate(context.getFileConfig().resource,
                                             CheckMode.ALL, context.getCancelIndicator());
             if (issues != null && !issues.isEmpty()) {
-                String issuesToString = issues.stream().map(Objects::toString).collect(Collectors.joining(System.lineSeparator()));
-                test.issues.append(issuesToString);
                 if (issues.stream().anyMatch(it -> it.getSeverity() == Severity.ERROR)) {
-                    test.result = Result.VALIDATE_FAIL;
+                    String message = issues.stream().map(Objects::toString).collect(Collectors.joining(System.lineSeparator()));
+                    throw new TestError(message, Result.VALIDATE_FAIL);
                 }
             }
-        } catch (Exception e) {
-            test.result = Result.VALIDATE_FAIL;
-        }
-        if (test.result == Result.VALIDATE_FAIL) {
-            throw new AssertionError("Validation unsuccessful.");
+        } catch (TestError e) {
+            throw e;
+        } catch (Throwable e) {
+            throw new TestError("Exception during validation.", Result.VALIDATE_FAIL, e);
         }
     }
 
@@ -464,22 +455,26 @@ public abstract class TestBase {
         args.setProperty("logging", "Debug");
     }
 
-
     /**
      * Invoke the code generator for the given test.
+     *
      * @param test The test to generate code for.
      */
-    private GeneratorResult generateCode(LFTest test) {
-        GeneratorResult result = GeneratorResult.NOTHING;
-        if (test.fileConfig.resource != null) {
-            generator.doGenerate(test.fileConfig.resource, fileAccess, test.context);
-            result = test.context.getResult();
-            if (generator.errorsOccurred()) {
-                test.result = Result.CODE_GEN_FAIL;
-                throw new AssertionError("Code generation unsuccessful.");
-            }
+    private GeneratorResult generateCode(LFTest test) throws TestError {
+        if (test.getFileConfig().resource == null) {
+            return GeneratorResult.NOTHING;
         }
-        return result;
+
+        try {
+            generator.doGenerate(test.getFileConfig().resource, fileAccess, test.getContext());
+        } catch (Throwable e) {
+            throw new TestError("Code generation unsuccessful.", Result.CODE_GEN_FAIL, e);
+        }
+        if (generator.errorsOccurred()) {
+            throw new TestError("Code generation unsuccessful.", Result.CODE_GEN_FAIL);
+        }
+
+        return test.getContext().getResult();
     }
 
 
@@ -488,16 +483,16 @@ public abstract class TestBase {
      * did not execute, took too long to execute, or executed but exited with
      * an error code.
      */
-    private void execute(LFTest test, GeneratorResult generatorResult) {
-        final List<ProcessBuilder> pbList = getExecCommand(test, generatorResult);
+    private void execute(LFTest test) throws TestError {
+        final List<ProcessBuilder> pbList = getExecCommand(test);
         if (pbList.isEmpty()) {
             return;
         }
         try {
             for (ProcessBuilder pb : pbList) {
                 var p = pb.start();
-                var stdout = test.execLog.recordStdOut(p);
-                var stderr = test.execLog.recordStdErr(p);
+                var stdout = test.recordStdOut(p);
+                var stderr = test.recordStdErr(p);
 
                 var stdoutException = new AtomicReference<Throwable>(null);
                 var stderrException = new AtomicReference<Throwable>(null);
@@ -505,49 +500,53 @@ public abstract class TestBase {
                 stdout.setUncaughtExceptionHandler((thread, throwable) -> stdoutException.set(throwable));
                 stderr.setUncaughtExceptionHandler((thread, throwable) -> stderrException.set(throwable));
 
+                stderr.start();
+                stdout.start();
+
                 if (!p.waitFor(MAX_EXECUTION_TIME_SECONDS, TimeUnit.SECONDS)) {
                     stdout.interrupt();
                     stderr.interrupt();
                     p.destroyForcibly();
-                    test.result = Result.TEST_TIMEOUT;
-                    return;
+                    throw new TestError(Result.TEST_TIMEOUT);
                 } else {
                     if (stdoutException.get() != null || stderrException.get() != null) {
-                        test.result = Result.TEST_EXCEPTION;
-                        test.execLog.buffer.setLength(0);
+                        StringBuffer sb = new StringBuffer();
                         if (stdoutException.get() != null) {
-                            test.execLog.buffer.append("Error during stdout handling:\n");
-                            appendStackTrace(stdoutException.get(), test.execLog.buffer);
+                            sb.append("Error during stdout handling:" + System.lineSeparator());
+                            sb.append(stackTraceToString(stdoutException.get()));
                         }
                         if (stderrException.get() != null) {
-                            test.execLog.buffer.append("Error during stderr handling:\n");
-                            appendStackTrace(stderrException.get(), test.execLog.buffer);
+                            sb.append("Error during stderr handling:" + System.lineSeparator());
+                            sb.append(stackTraceToString(stderrException.get()));
                         }
-                        return;
+                        throw new TestError(sb.toString(), Result.TEST_EXCEPTION);
                     }
                     if (p.exitValue() != 0) {
-                        test.result = Result.TEST_FAIL;
-                        test.exitValue = Integer.toString(p.exitValue());
-                        return;
+                        String message = "Exit code: " + p.exitValue();
+                        if (p.exitValue() == 139) {
+                            // The java ProcessBuiler and Process interface does not allow us to reliably retrieve stderr and stdout
+                            // from a process that segfaults. We can only print a message indicating that the putput is incomplete.
+                            message += System.lineSeparator() +
+                            "This exit code typically indicates a segfault. In this case, the execution output is likely missing or incomplete.";
+                        }
+                        throw new TestError(message, Result.TEST_FAIL);
                     }
                 }
             }
-        } catch (Exception e) {
-            test.result = Result.TEST_EXCEPTION;
-            // Add the stack trace to the test output
-            appendStackTrace(e, test.execLog.buffer);
-            return;
+        } catch (TestError e) {
+            throw  e;
+        } catch (Throwable e) {
+            throw new TestError("Exception during test execution.", Result.TEST_EXCEPTION, e);
         }
-        test.result = Result.TEST_PASS;
-        // clear the log if the test succeeded to free memory
-        test.execLog.clear();
     }
 
-    static private void appendStackTrace(Throwable t, StringBuffer buffer) {
+    static public String stackTraceToString(Throwable t) {
         StringWriter sw = new StringWriter();
         PrintWriter pw = new PrintWriter(sw);
         t.printStackTrace(pw);
-        buffer.append(sw);
+        pw.flush();
+        pw.close();
+        return sw.toString();
     }
 
     /**
@@ -603,7 +602,7 @@ public abstract class TestBase {
             System.out.println(Message.MISSING_DOCKER);
             return List.of(new ProcessBuilder("exit", "1"));
         }
-        var srcGenPath = test.fileConfig.getSrcGenPath();
+        var srcGenPath = test.getFileConfig().getSrcGenPath();
         var dockerComposeFile = FileUtil.globFilesEndsWith(srcGenPath, "docker-compose.yml").get(0);
         var dockerComposeCommand = DockerGeneratorBase.getDockerComposeCommand();
         return List.of(new ProcessBuilder(dockerComposeCommand, "-f", dockerComposeFile.toString(), "rm", "-f"),
@@ -620,7 +619,7 @@ public abstract class TestBase {
             System.out.println(Message.MISSING_DOCKER);
             return List.of(new ProcessBuilder("exit", "1"));
         }
-        var srcGenPath = test.fileConfig.getSrcGenPath();
+        var srcGenPath = test.getFileConfig().getSrcGenPath();
         List<Path> dockerFiles = FileUtil.globFilesEndsWith(srcGenPath, ".Dockerfile");
         try {
             File testScript = File.createTempFile("dockertest", null);
@@ -644,9 +643,11 @@ public abstract class TestBase {
      * that should be used to execute the test program.
      * @param test The test to get the execution command for.
      */
-    private List<ProcessBuilder> getExecCommand(LFTest test, GeneratorResult generatorResult) {
-        var srcBasePath = test.fileConfig.srcPkgPath.resolve("src");
-        var relativePathName = srcBasePath.relativize(test.fileConfig.srcPath).toString();
+
+    private List<ProcessBuilder> getExecCommand(LFTest test) throws TestError {
+
+        var srcBasePath = test.getFileConfig().srcPkgPath.resolve("src");
+        var relativePathName = srcBasePath.relativize(test.getFileConfig().srcPath).toString();
 
         // special case to test docker file generation
         if (relativePathName.equalsIgnoreCase(TestCategory.DOCKER.getPath())) {
@@ -654,10 +655,9 @@ public abstract class TestBase {
         } else if (relativePathName.equalsIgnoreCase(TestCategory.DOCKER_FEDERATED.getPath())) {
             return getFederatedDockerExecCommand(test);
         } else {
-            LFCommand command = generatorResult.getCommand();
+            LFCommand command = test.getFileConfig().getCommand();
             if (command == null) {
-                test.result = Result.NO_EXEC_FAIL;
-                test.issues.append("File: ").append(generatorResult.getExecutable()).append(System.lineSeparator());
+                throw new TestError("File: " + test.getFileConfig().getExecutable(), Result.NO_EXEC_FAIL);
             }
             return command == null ? List.of() : List.of(
                 new ProcessBuilder(command.command()).directory(command.directory())
@@ -684,24 +684,20 @@ public abstract class TestBase {
         for (var test : tests) {
             try {
                 redirectOutputs(test);
-                var context = configure(test, configurator, level);
-                validate(test, context);
-                GeneratorResult result = GeneratorResult.NOTHING;
+                configure(test, configurator, level);
+                validate(test);
                 if (level.compareTo(TestLevel.CODE_GEN) >= 0) {
-                    result = generateCode(test);
+                    generateCode(test);
                 }
                 if (level == TestLevel.EXECUTION) {
-                    execute(test, result);
-                } else if (test.result == Result.UNKNOWN) {
-                    test.result = Result.TEST_PASS;
+                    execute(test);
                 }
-
-            } catch (AssertionError e) {
-                // Do not report assertion errors. They are pretty printed
-                // during reporting.
-            } catch (Exception e) {
-                test.issues.append(e.getMessage());
-                e.printStackTrace();
+                test.markPassed();
+            } catch (TestError e) {
+                test.handleTestError(e);
+            } catch (Throwable e) {
+                test.handleTestError(new TestError(
+                    "Unknown exception during test execution", Result.TEST_EXCEPTION, e));
             } finally {
                 restoreOutputs();
             }
